Use native API for CERT-Bund advisory list
